Bug 206191 - Note field is not imported from a .csv file
Summary: Note field is not imported from a .csv file
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-04 00:53 UTC by Sabine Faure
Modified: 2009-09-10 20:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-09-04 00:53:34 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook.
- find or export 3 contacts (with notes in them) in a .csv file
- Go to File menu/Import/Import CSV file...
- Browse to enter the .csv file in 'File to import'
- Change the 'Undefined' headings in proper headings (especially the 'Note' heading)
- Click on 'Ok'
- Select an Address Book to import the Contact into

The Contacts are imported in the specified address book but eventhough the 'Note' field was in the 'CSV import' dialogue it has not been imported at all.

Trunk, Svn Rev 1019355
Comment 1 Tobias Koenig 2009-09-04 14:32:48 UTC
SVN commit 1019802 by tokoe:

Import the note property of a contact correctly from CSV file.

BUG: 206191


 M  +1 -1      contactfields.cpp  
 M  +2 -0      xxport/csv/csvimportdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019802
Comment 2 Sabine Faure 2009-09-10 20:13:43 UTC
It is corrected now.

The 'Note' field is imported along with the rest of the Contact information.

Trunk, Svn Rev 1021831