Import the note property of a contact correctly from CSV file.

BUG: 206191

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1019802